# ws-chat-fastapi

./: main.py  manager.py  pyproject.toml
templates/: socket.html
